name:                pointcloudviewer
version:             0.1.0
license:             MIT
author:              Niklas Hambüchen <mail@nh2.me>, Nandor Licker
maintainer:          Niklas Hambüchen <mail@nh2.me>
build-type:          Simple
cabal-version:       >=1.8
homepage:            https://github.com/nh2/cloudviewer
bug-reports:         https://github.com/nh2/cloudviewer/issues
synopsis:            Point Cloud Viewer
description:
  Displays point clouds with OpenGL.


executable pointcloudviewer
  main-is:             Main.hs
  build-depends:       base >= 4.6 && < 5
                     , GLUT >= 2.5
                     , GLUtil >= 0.7
                     , selfrestart >= 0.1
                     , containers >= 0.5
                     , random >= 1.0
                     , honi >= 0.1
                     , vector >= 0.10
                     , bytestring >= 0.10
                     , time >= 1.4
                     , foreign-store >= 0.0
                     , spool >= 0.1
                     , vect >= 0.4.7
                     , safe >= 0.3.4
                     , attoparsec >= 0.10.4.0
                     , pcd-loader >= 0.3.0.1
                     , linear >= 1.6
                     , cpu >= 0.1.2
                     , hmatrix >= 0.15.2.0
                     , filepath >= 1.3.0.1
                     , QuickCheck >= 2.7.3
                     , cereal >= 0.4.0.1
                     , safecopy >= 0.8.3
                     , vector-algorithms >= 0.6.0.1
                     , directory >= 1.2.0.1
  ghc-options: -Wall -threaded -fno-ignore-asserts
